@@ -1,8 +1,11 @@
 <?php
+use \TYPO3\CMS\Core\Utility\GeneralUtility;
+use \TYPO3\CMS\Core\Utility\ExtensionManagementUtility;
+use \TYPO3\CMS\Extbase\Utility\LocalizationUtility;
 /***************************************************************
 *  Copyright notice
 *
-*  (c) 2013 Stanislas Rolland <typo3(arobas)sjbr.ca>
+*  (c) 2013-2014 Stanislas Rolland <typo3(arobas)sjbr.ca>
 *  All rights reserved
 *
 *  This script is part of the Typo3 project. The Typo3 project is
@@ -26,6 +29,16 @@
  */
 class ext_update {
 	/**
+	 * @var string Name of the extension this controller belongs to
+	 */
+	protected $extensionName = 'StaticInfoTables';
+
+	/**
+	 * @var TYPO3\CMS\Extbase\Object\ObjectManager Extbase Object Manager
+	 */
+	protected $objectManager;
+
+	/**
 	 * Main function, returning the HTML content
 	 *
 	 * @return string HTML
@@ -33,29 +46,49 @@ class ext_update {
 	function main()	{
 		$content = '';
 
-		$objectManager = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance('TYPO3\\CMS\\Extbase\\Object\\ObjectManager');
-		$databaseUpdateUtility = $objectManager->get('SJBR\\StaticInfoTables\\Utility\\DatabaseUpdateUtility');
+		$this->objectManager = \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance('TYPO3\\CMS\\Extbase\\Object\\ObjectManager');
+		$databaseUpdateUtility = $this->objectManager->get('SJBR\\StaticInfoTables\\Utility\\DatabaseUpdateUtility');
 		
 		// Clear the class cache
-		$classCacheManager = $objectManager->get('SJBR\\StaticInfoTables\\Cache\\ClassCacheManager');
+		$classCacheManager = $this->objectManager->get('SJBR\\StaticInfoTables\\Cache\\ClassCacheManager');
 		$classCacheManager->reBuild();
+		
+		// Process the database updates of this base extension (we want to re-process these updates every time the update script is invoked)
+		$extensionSitePath = ExtensionManagementUtility::extPath(GeneralUtility::camelCaseToLowerCaseUnderscored($this->extensionName));
+		$content .= '<p>' . nl2br(LocalizationUtility::translate('updateTables', $this->extensionName)) . '</p>';
+		$this->importStaticSqlFile($extensionSitePath);
 
 		// Get the extensions which want to extend static_info_tables
-		$loadedExtensions = array_unique(\TYPO3\CMS\Core\Utility\ExtensionManagementUtility::getLoadedExtensionListArray());
+		$loadedExtensions = array_unique(ExtensionManagementUtility::getLoadedExtensionListArray());
 		foreach ($loadedExtensions as $extensionKey) {
-			$extensionInfoFile = \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath($extensionKey) . 'Configuration/DomainModelExtension/StaticInfoTables.txt';
+			$extensionInfoFile = ExtensionManagementUtility::extPath($extensionKey) . 'Configuration/DomainModelExtension/StaticInfoTables.txt';
 			if (file_exists($extensionInfoFile)) {
 				$databaseUpdateUtility->doUpdate($extensionKey);
-				$content.= '<p>' . nl2br(\TYPO3\CMS\Extbase\Utility\LocalizationUtility::translate('updateLanguageLabels', 'StaticInfoTables')) . ' ' . $extensionKey . '</p>';
+				$content .= '<p>' . nl2br(LocalizationUtility::translate('updateLanguageLabels', $this->extensionName)) . ' ' . $extensionKey . '</p>';
 			}
 		}
 		if (!$content) {
 			// Nothing to do
-			$content .= '<p>' . nl2br(\TYPO3\CMS\Extbase\Utility\LocalizationUtility::translate('nothingToDo', 'StaticInfoTables')) . '</p>';
+			$content .= '<p>' . nl2br(LocalizationUtility::translate('nothingToDo', $this->extensionName)) . '</p>';
 		}
 		// Notice for old language packs
-		$content .= '<p>' . nl2br(\TYPO3\CMS\Extbase\Utility\LocalizationUtility::translate('update.oldLanguagePacks', 'StaticInfoTables')) . '</p>';
+		$content .= '<p>' . nl2br(LocalizationUtility::translate('update.oldLanguagePacks', $this->extensionName)) . '</p>';
 		return $content;
+	}
+
+	/**
+	 * Imports a static tables SQL File (ext_tables_static+adt)
+	 *
+	 * @param string $extensionSitePath
+	 * @return void
+	 */
+	protected function importStaticSqlFile($extensionSitePath) {
+		$extTablesStaticSqlFile = $extensionSitePath . 'ext_tables_static+adt.sql';
+		if (file_exists($extTablesStaticSqlFile)) {
+			$extTablesStaticSqlContent = GeneralUtility::getUrl($extTablesStaticSqlFile);
+			$installTool = $this->objectManager->get('TYPO3\\CMS\\ExtensionManager\\Utility\\InstallUtility');
+			$installTool->importStaticSql($extTablesStaticSqlContent);
+		}
 	}
 
 	function access() {
