@@ -1,3 +1,7 @@
+2014-01-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Re-create the tables whenever the extension update script in run
+
 2014-01-17  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to #54160: List module broken on root page
